fix broken links

--- a/stories/teaching/psc205.md
+++ b/stories/teaching/psc205.md
@@ -60,37 +60,36 @@ Homework assignments and solutions
   [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw1-solutions.pdf)
 - Homework 2:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw2.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw2-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw2-solutions.pdf)
 - Homework 3:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw3.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw3-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw3-solutions.pdf)
 - Homework 4:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw4.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw4-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw4-solutions.pdf)
 - Homework 5:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw5.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw5-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw5-solutions.pdf)
 - Homework 6:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw6.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw6-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw6-solutions.pdf)
 - Homework 7:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw7.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw7-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw7-solutions.pdf)
 - Homework 8:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw8.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw8-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw8-solutions.pdf)
 - Homework 9:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw9.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw9-solutions.R),
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw9-solutions.pdf),
   [Chesterfields Ad](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/chesterfields.mov),
   [Willie Horton Ad](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/WillieHorton_ad.mov)
 - Homework 10:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw9.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw9-solutions.R)
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw9-solutions.pdf)
 - Homework 11:
   [assignment](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw10.pdf),
-  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw10-solutions.R)
-
+  [solutions](https://s3.amazonaws.com/docs.jrnold.me/psc205/homework/hw10-solutions.pdf)
 
 
 ### Data
