fixing spelling errors

--- a/pages/teaching/rochester/psc205.md
+++ b/pages/teaching/rochester/psc205.md
@@ -1,5 +1,5 @@
 <!-- 
-.. title: PSC 205: Introductory Statistical Methods (Univesrity of Rochester, Spring 2012)
+.. title: PSC 205: Introductory Statistical Methods (University of Rochester, Spring 2012)
 .. slug: psc205
 .. date: 2013/03/11 15:49
 .. tags: 
@@ -7,12 +7,11 @@
 .. description: 
 -->
 
-I TA'd this course for
-[Curtis Signorino](http://www.rochester.edu/college/psc/signorino/) in
+I was a teaching assistant for this course, taught by [Curtis Signorino](http://www.rochester.edu/college/psc/signorino/) in 
 Spring 2012. I was responsible for planning and teaching weekly lab
 sessions and writing and grading weekly homework assignments.
 
-This course used Agresti and Finlay's
+This course used Agresti and Finlay&lsquo;s
 [Statistical Methods for the Social Sciences](http://books.google.com/books?id=FMXaAAAAMAAJ).
 Since this course used *R*, I wrote a package [smss](https://github.com/jrnold/r-smss) which
 contains the datasets used in the book.
